<resources>
    <string name="app_name">OVINAV</string>
    <string name="ble_not_supported">Bluetooth Low Energy (BLE) is not supported</string>
    <string name="label_data">Data :</string>
    <string name="label_device_address">Device address :</string>
    <string name="label_state">State :</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">Bluetooth Low Energy (BLE) Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="is_serial">Serial Present:</string>
    <string name="button">Send</string>
    <string name="red_slide">Red</string>
    <string name="blue_slide">Blue</string>
    <string name="green_slide">Green</string>
    <string-array name="roygbiv">
        <item>Red</item>
        <item>Green</item>
        <item>Blue</item>
    </string-array>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>

</resources>
