<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:padding="7dp"
    android:background="#344345"

    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="4dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_device_address"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <Space
            android:layout_width="8dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/device_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_state"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <Space
            android:layout_width="8dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/connection_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Connecting..."
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="4dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_data"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <Space
            android:layout_width="8dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/data_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_data"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/isSerial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="4dp"
        android:text="@string/is_serial"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:visibility="invisible" />

    <Button
        android:id="@+id/Instant_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/border_round"
        android:backgroundTint="#F53333"
        android:clickable="false"
        android:onClick="Instant_btn"
        android:text="Instant Mode"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/real_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/border_round"
        android:backgroundTint="#0000FF"
        android:clickable="false"
        android:onClick="read"

        android:text="Start Real Time Mode"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/sync_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/border_round"
        android:backgroundTint="#00FF00"
        android:clickable="false"
        android:onClick="sync"
        android:text="Sync"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold" />


    <!-- <ScrollView
         android:id="@+id/textAreaScroller"
         android:layout_width="fill_parent"
         android:layout_height="173dp"
         android:scrollbars="vertical">

         <TextView
             android:id="@+id/textView"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text=" Text "
             android:textAppearance="?android:attr/textAppearanceLarge" />
     </ScrollView> -->


</LinearLayout>